Bug 1314968 - Disentangle nsWifiScannerDBus::SendMessage. r=kanru

Make a copy of the function and specialize it for each message sent.
Avoids the mess of comparing the method name to figure out what to do.

MozReview-Commit-ID: 1KlZyc8Pc9I